chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  type: LoadBalancer
  selector:
    app: appfront
  ports:
    - name: http
      port: 8000
      targetPort: 3000
      nodePort: 30001
