chart/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-appfront
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway-k3s
  http:
  - match:
    - uri:
        prefix: /cadastro/canary/
    route:
    - destination:
        host: front-service
        subset: v1
      weight: 50
  - match:
    - uri:
        prefix: /cadastro/stable/
    route:
    - destination:
        host: front-service
        subset: v2
      weight: 50
  - match:
    - uri:
        prefix: /cadastro
    route:
    - destination:
        host: front-service
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-appfront
spec:
  host: front-service
  subsets:
  - name: v1
    labels:
      version: canary
  - name: v2
    labels:
      version: stable
